updated endpoint structure
